tests/ui/explicit/explicit-call-to-dtor.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/explicit-call-to-dtor.rs:15:7
   |
LL |     x.drop();
   |     --^^^^--
   |     | |
   |     | explicit destructor calls not allowed
   |     help: consider using `drop` function: `drop(x)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
